# literature-to-facts

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Snakefile  adsabs.py  arxivfacts.py  entrypoint.sh  gcnsall.py  l2f-daily.service  make.sh  requirements.txt  setup.cfg  setup.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  deployment.yaml
facts/: arxiv.py  atel.py  cli.py  common.py  conclude.py  core.py  gcn.py  learn.py  tools.py
tests/: test_gcn.py
