[bumpversion]
current_version = 0.6.12
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bumpversion:part:build]

[bumpversion:file:VERSION]

[bumpversion:file:setup.py]

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = literature-to-facts
license = GPL-2+
license_file = COPYING
version = 0.3.0
author = V.S.
author_email = vladimir.savchenko@gmail.com
url = https://odahub.io/
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires = 
	lxml
	six
	coloredlogs
	path.py
	minio
	cwltool
	rdflib
	keyring
	keyrings.cryptfile
	rdflib-jsonld
        feedparser
        click
        requests
        oda-knowledge-base[rdf,cwl]
        colorama

tests_require = 
	pytest

[options.entry_points]
console_scripts = 
	l2f = facts.cli:cli

